Alignment issue is fixed

--- a/src/components/Expense.css
+++ b/src/components/Expense.css
@@ -9,6 +9,8 @@
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
+    height: 628px;
+    overflow: auto;
 }
 
 .expense-box h3 {
